--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -396,7 +396,6 @@
     "     * water - kg in a m3 mixture\n",
     "     * superplasticizer - kg in a m3 mixture\n",
     "     * coarse_aggregate - kg in a m3 mixture\n",
-    "     * coarse_aggregate - kg in a m3 mixture\n",
     "     * fine_aggregate - kg in a m3 mixture\n",
     "     * age - Day (1~365)\n",
     "     * concrete_compressive_strength - MPa\n",
@@ -413,7 +412,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c65b4aa0cf97449a809d06502a18f803",
+       "model_id": "ebaee675f7d0441ba92b950f49c3cd0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +426,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f734958f3a64e188faaf303be44bd6e",
+       "model_id": "09b9021c65e34aa8b2216210131ccce6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6212ad91a8a545f7ac281ee4b6e8d90e",
+       "model_id": "ea0a72d4b8f747739a7f7e65e1d99b67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,7 +480,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f79cd7ae32745e2abb41555d8e797ca",
+       "model_id": "3f5869f6fbd64f7b80c3033409d5e257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad99c05e035e417bbb9794277de28ed5",
+       "model_id": "087daeb3b5fd4fcebc3bd39e09267e23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -700,7 +699,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x20d8c5be5b0>"
+       "<seaborn.axisgrid.PairGrid at 0x17dbba44940>"
       ]
      },
      "execution_count": 9,
@@ -1037,6 +1036,7 @@
    ],
    "source": [
     "sample_outliers = detect_outliers_iqr(df[outliers_column[-1]])\n",
+    "outliers_index=[]\n",
     "for outlier in sample_outliers:\n",
     "    outliers_index.append(df[df[outliers_column[-1]]==outlier].index.values[0])\n",
     "df.drop(df.index[outliers_index],axis=0,inplace=True)\n",
